src/main/java/com/example/askme/common/error/exception/AuthenticationException.java
package com.example.askme.common.error.exception;

import com.example.askme.common.error.ErrorCode;
import lombok.Getter;

@Getter
public class AuthenticationException extends RuntimeException {

    private ErrorCode errorCode;

    public AuthenticationException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }

    public AuthenticationException(ErrorCode errorCode, String message) {
        super(message);
        this.errorCode = errorCode;
    }

    public AuthenticationException(ErrorCode errorCode, Throwable cause) {
        super(cause);
        this.errorCode = errorCode;
    }

    public AuthenticationException(ErrorCode errorCode, String message, Throwable cause) {
        super(message, cause);
        this.errorCode = errorCode;
    }

}
